fix: white space no wrap

--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,6 @@ body {
   font-weight: 700;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .row-meta {
